--- a/content/blog/2024/05/03.md
+++ b/content/blog/2024/05/03.md
@@ -1,10 +1,10 @@
 ---
-title: 京都駅ビルの東西をつなぐ空中往路を歩いてきた
+title: 京都駅ビルの東西をつなぐ空中径路を歩いてきた
 created: 2024-05-03
 updated: 2024-05-03
 ---
 
-多くの観光客が訪れる京都。その玄関口としての役割を果たす巨大な京都駅のターミナルビル **「京都駅ビル」にある「空中往路」** を歩いてきました。空中往路は京都駅ビルの 10 階の高さにある、ビルの西側と東側をつなぐ全長 185m の空中廊下です。
+多くの観光客が訪れる京都。その玄関口としての役割を果たす巨大な京都駅のターミナルビル **「京都駅ビル」にある「空中径路」** を歩いてきました。空中径路は京都駅ビルの 10 階の高さにある、ビルの西側と東側をつなぐ全長 185m の空中廊下です。
 
 - [KYOTO STATION BUILDING SQUARE | 京都駅ビル](https://www.kyoto-station-building.co.jp/lp/square/)
 
@@ -20,24 +20,24 @@ updated: 2024-05-03
 
 ![京都駅の写真](4db020b1-30fe-45c7-c8e2-cbeb8d3aa000)
 
-迷子になりそうになりながらも、どうにか案内看板を探しながらエスカレーターを利用して移動していきます。人は少なめですが、全くいないということもなく、同じように空中往路へと向かうと思われる方がちらほらと見られました。
+迷子になりそうになりながらも、どうにか案内看板を探しながらエスカレーターを利用して移動していきます。人は少なめですが、全くいないということもなく、同じように空中径路へと向かうと思われる方がちらほらと見られました。
 
 途中で通った駅の東側の広場にはピアノが設置されていて、どなたかが素敵な音楽を奏でていました。こういう広々としたすてきな空間で演奏するの、気持ちよさそうですよね。ピアノ弾けないけど…。
 
 ![京都駅の写真](34320434-8b0a-4de8-db94-f99a38f7bc00)
 
-ピアノの演奏を聴きながら、空中往路へとつながる最後のエスカレーターに乗っていきます。結構長いエスカレーターで、かなり高いところまで一気に運んでくれます。
+ピアノの演奏を聴きながら、空中径路へとつながる最後のエスカレーターに乗っていきます。結構長いエスカレーターで、かなり高いところまで一気に運んでくれます。
 
-ぐるぐるとエスカレーターを乗り継いで、空中往路に到着。ここまでは窓などが少なくほとんど駅の外の景色を見ることができませんでしたが、ようやく外の景色を見ることができます。
+ぐるぐるとエスカレーターを乗り継いで、空中径路に到着。ここまでは窓などが少なくほとんど駅の外の景色を見ることができませんでしたが、ようやく外の景色を見ることができます。
 
-![京都駅ビル空中往路の写真](59c4783b-1051-4aa4-053c-4c30f098fa00)
+![京都駅ビル空中径路の写真](59c4783b-1051-4aa4-053c-4c30f098fa00)
 
-京都駅ビルの空中往路は、もう 20 年以上が経っているはずなのに近代的というかなんだか近未来的な雰囲気すら感じます。ところどころに京都駅の北側の景色が一望できるスペースがあり、正面には京都タワー、その奥には東本願寺などのお寺の姿が見られます。
+京都駅ビルの空中径路は、もう 20 年以上が経っているはずなのに近代的というかなんだか近未来的な雰囲気すら感じます。ところどころに京都駅の北側の景色が一望できるスペースがあり、正面には京都タワー、その奥には東本願寺などのお寺の姿が見られます。
 
 京都は景観保護のため建築物の高さ制限がありますが、京都駅周辺は特例措置で制限が緩和されているようで、周辺に遮るものが何もなくて本当に遠くの方まで見渡すことができます。
 
-![京都駅ビル空中往路から見る京都タワーの写真](ecfbef39-3d18-4cb7-bb58-1122a91a9d00)
+![京都駅ビル空中径路から見る京都タワーの写真](ecfbef39-3d18-4cb7-bb58-1122a91a9d00)
 
-夜には「STAR BRIDGE」と題されたイルミネーションも楽しめるそうで、その案内が空中往路に掲示されていました。宿泊でもしないとなかなか夜に京都を訪れるというのは厳しそうですが、機会があれば見に来たいです。京都タワーもライトアップとかされるんだろうか…。
+夜には「STAR BRIDGE」と題されたイルミネーションも楽しめるそうで、その案内が空中径路に掲示されていました。宿泊でもしないとなかなか夜に京都を訪れるというのは厳しそうですが、機会があれば見に来たいです。京都タワーもライトアップとかされるんだろうか…。
 
 大混雑の京都の中でも比較的人が少ないので、のんびり駅周辺を歩きたいときには良いかもです。
