fix: 句点の抜けを修正

--- a/content/blog/2025/12/19.md
+++ b/content/blog/2025/12/19.md
@@ -4,7 +4,7 @@ created: 2025-12-19
 updated: 2025-12-19
 ---
 
-[無印良品](https://www.muji.com/jp/ja/store/) に行くと、棚には非常にたくさんのカレーが並べられているのを見かけます。少し前に無印良品で一番人気のレトルトカレーだという [「素材を生かしたカレー バターチキン」を食べた](/blog/20251114/) のですが、別の商品も食べてみようということで、辛いものが苦手な私はまずは辛くないカレーから。辛くないらしい **「辛くない国産りんごと野菜のカレー」を食べてみる** ことにしました
+[無印良品](https://www.muji.com/jp/ja/store/) に行くと、棚には非常にたくさんのカレーが並べられているのを見かけます。少し前に無印良品で一番人気のレトルトカレーだという [「素材を生かしたカレー バターチキン」を食べた](/blog/20251114/) のですが、別の商品も食べてみようということで、辛いものが苦手な私はまずは辛くないカレーから。辛くないらしい **「辛くない国産りんごと野菜のカレー」を食べてみる** ことにしました。
 
 - [素材を生かした 辛くない 国産りんごと野菜のカレー | 無印良品](https://www.muji.com/jp/ja/store/cmdty/detail/4550182505863)
 
