docs: スターバックスのプレスリリースurlを新urlへ変更

--- a/content/blog/2023/11/14.md
+++ b/content/blog/2023/11/14.md
@@ -24,7 +24,7 @@ updated: 2023-11-14
 
 千日前通を歩いて、途中にある **「セブンイレブン大阪幸町二丁目東店」** で **スターバックスの「ハニーオーツミルクラテ」** をお散歩のお供として購入しました。先月から期間限定で販売されている商品らしい。
 
-- [スターバックス® チルドカップ「ハニーオーツミルクラテ」10月3日（火）より期間限定新発売 ― オーツミルクとまろやかなはちみつを使用した、秋めく季節に心落ち着くやさしい味わいのラテ ― | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2023-4989.php)
+- [スターバックス® チルドカップ「ハニーオーツミルクラテ」10月3日（火）より期間限定新発売 ― オーツミルクとまろやかなはちみつを使用した、秋めく季節に心落ち着くやさしい味わいのラテ ― | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2023/pr2023-4989/)
 
 お値段はちょっと高めでしたが、まあ仕事頑張ったご褒美ということでたまには良いんじゃないでしょうか。はちみつの甘みがいい感じで私はすきです。
 
