--- a/content/blog/2023/11/18.md
+++ b/content/blog/2023/11/18.md
@@ -6,7 +6,7 @@ updated: 2023-11-18
 
 ハロウィンが終わった途端に、 **街中が一斉にクリスマスっぽい雰囲気** になりましたね🎄 まだ 12 月にもなっていませんが、スターバックスコーヒーで 11 月 1 日からホリデーシーズン 2023 がスタートし **新作ビバレッジが登場しました** 。
 
-- [スターバックスのホリデーシーズンを象徴する心高鳴るビバレッジが11月1日(水)に多数登場！昨年に続き「誰かの笑顔につながる」寄付プログラムも実施 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5006.php)
+- [スターバックスのホリデーシーズンを象徴する心高鳴るビバレッジが11月1日(水)に多数登場！昨年に続き「誰かの笑顔につながる」寄付プログラムも実施 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2023/pr2024-5006/)
 
 新しく登場したのは **「ストロベリーメリークリームフラペチーノ」** と **「ストロベリーメリークリームティーラテ」** 。クリスマスといえばクリスマスケーキ、クリスマスケーキといえばイチゴということで、名前にストロベリーと付いているだけで謎の年末感が感じられます。イチゴって絶対本来冬に実がなる果物ではないと思うんですけども。冬に出荷できるように栽培してくださっている農家の方々に感謝🙏
 
