--- a/content/blog/2023/11/27.md
+++ b/content/blog/2023/11/27.md
@@ -6,7 +6,7 @@ updated: 2023-11-27
 
 全国に店舗がある、誰もが知る有名コーヒーストアであるスターバックスコーヒー。そんなスタバは、今月 11 月で **大阪に西日本 1 号店をオープンしてから 25 周年を迎える** そう。この大阪出店 25 周年を記念して、「大阪 25th めっちゃよくばり クリーミー 抹茶 フラペチーノ」という **特別な商品が大阪限定で販売される** ということで、飲みに行ってきました！
 
-- [大阪府出店25周年アニバーサリープロジェクト11月15日（水）からスタート！パートナー考案『大阪 25th めっちゃよくばり クリーミー 抹茶 フラペチーノ®』を府内144店舗で販売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5017.php)
+- [大阪府出店25周年アニバーサリープロジェクト11月15日（水）からスタート！パートナー考案『大阪 25th めっちゃよくばり クリーミー 抹茶 フラペチーノ®』を府内144店舗で販売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2023/pr2024-5017/)
 
 スタバが大阪府に 1 号店を出店したのは、1998 年の 11 月 28 日とのこと。25 年間の感謝の気持ちのこもった商品は、 **抹茶のフレーバー** に、 **ホワイトチョコレート風味のシロップとフレッシュクリームを合わせたソース** 、そしてトッピングには **ホイップクリームにチョコレートソースにキャラメルソースに抹茶パウダー** とめっちゃ豪華で贅沢なフラペチーノ。よくばりすぎる。
 
