--- a/content/blog/2023/12/13.md
+++ b/content/blog/2023/12/13.md
@@ -8,7 +8,7 @@ updated: 2023-12-13
 
 新しく登場したのは **「メルティホワイトピスタチオフラペチーノ」** と **「メルティホワイトピスタチオモカ」** の 2 種類。ピスタチオのフレーバーのドリンクが発売されるのは 5 年ぶりらしい。
 
-- [スターバックス ホリデーシーズン 第2弾！「メルティホワイト ピスタチオ フラペチーノ®」と「メルティホワイト ピスタチオ モカ」が11月29日（水）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5025.php)
+- [スターバックス ホリデーシーズン 第2弾！「メルティホワイト ピスタチオ フラペチーノ®」と「メルティホワイト ピスタチオ モカ」が11月29日（水）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2023/pr2024-5025/)
 
 冬に冷たいものを飲もうという気にはどうしてもなれなかったので、 **「メルティホワイトピスタチオモカ」の方を飲みに行ってきました** 。店内でゆっくり…と思っていたのですが、あまりにも混雑していたので持ち帰りにしました。京都のスタバは観光客が多い…。
 
