--- a/content/blog/2024/01/11.md
+++ b/content/blog/2024/01/11.md
@@ -6,7 +6,7 @@ updated: 2024-01-11
 
 クリスマスも終わり、もうすぐで 2023 年も終わりという年末。お正月にもなっていないのにコンビニの前に「恵方巻」と書かれた旗が置かれているなど季節感がよく分からなくなっている中、慌ただしい年末年始に向けてスターバックスコーヒーで **12 月 26 日から新作ビバレッジが登場しました** 。
 
-- [年末年始はスターバックスで「ほっと」ひと息する、和みのティー体験 『ほうじ茶 もちっと ミルク フラペチーノ®』等、3種のティービバレッジが12月26日から新登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5040.php)
+- [年末年始はスターバックスで「ほっと」ひと息する、和みのティー体験 『ほうじ茶 もちっと ミルク フラペチーノ®』等、3種のティービバレッジが12月26日から新登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2023/pr2024-5040/)
 
 新しく登場したのは深煎りほうじ茶を使用した **「ほうじ茶もちっとミルクフラペチーノ」** と **「ほうじ茶まろやかキャラメルティーラテ」** 、それから **「ストロベリーラベンダーティーラテ」** 。
 
