--- a/content/blog/2024/01/26.md
+++ b/content/blog/2024/01/26.md
@@ -6,7 +6,7 @@ updated: 2024-01-26
 
 お正月が過ぎた途端、街中のスーパーマーケットやコンビニなどに恵方巻の案内が出てきました。そしてスターバックスコーヒーでは節分よりもさらに先のイベント、 **バレンタインシーズンのビバレッジが 1 月 17 日から登場** しています🍫
 
-- [チョコレートが艶やかに輝く2つの"オペラ" 「オペラ フラペチーノ®」と「ホワイト オペラ フラペチーノ®」を1月17日（水）より発売 10種のチョコレートスイーツもそろい踏みするスターバックスバレンタインがスタート | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5045.php)
+- [チョコレートが艶やかに輝く2つの"オペラ" 「オペラ フラペチーノ®」と「ホワイト オペラ フラペチーノ®」を1月17日（水）より発売 10種のチョコレートスイーツもそろい踏みするスターバックスバレンタインがスタート | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5045/)
 
 登場したのは、伝統的なチョコレートケーキ「オペラ」をイメージした **「オペラフラペチーノ」** と **「ホワイトオペラフラペチーノ」** という 2 種類のフラペチーノ。オペラはフランス・パリにあるオペラ座にちなんで名付けられた、高級感のある見た目をしたケーキだそう。
 
