--- a/content/blog/2024/02/07.md
+++ b/content/blog/2024/02/07.md
@@ -6,7 +6,7 @@ updated: 2024-02-07
 
 少し前に [スターバックスコーヒーへ「オペラフラペチーノ」を飲みに行きました](/blog/20240126/) が、1 月 31 日から **新たなオペラフラペチーノが 2 種類登場** しました。新たに発売を開始したフラペチーノも、フランスの伝統的なチョコレートケーキである「オペラ」をイメージしたもの。さっそく飲みに行ってきました🍫
 
-- [深紅をまとった艶やかなベリーのソースとチョコレートが織りなすハーモニー 「ルージュ オペラ フラペチーノ®」と「ルージュ ホワイト オペラ フラペチーノ®」を1月31日（水）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5052.php)
+- [深紅をまとった艶やかなベリーのソースとチョコレートが織りなすハーモニー 「ルージュ オペラ フラペチーノ®」と「ルージュ ホワイト オペラ フラペチーノ®」を1月31日（水）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5052/)
 
 バレンタインシーズン直前に仲間入りした新たなフラペチーノは **「ルージュオペラフラペチーノ」と「ルージュホワイトオペラフラペチーノ」** の 2 種類。先行して提供されている「オペラフラペチーノ」「ホワイトオペラフラペチーノ」と同じチョコレート・ホワイトチョコレートがベースとなっているようです。
 
