--- a/content/blog/2024/03/01.md
+++ b/content/blog/2024/03/01.md
@@ -6,7 +6,7 @@ updated: 2024-03-01
 
 寒い冬もおわりに近づき、徐々に暖かくなっていました。今月中旬から下旬くらいには桜も咲き始めるのかな？といった中、スターバックスコーヒーで **SAKURA シーズンのビバレッジが 2 月 15 日から登場** しています🌸
 
-- [SAKURAシーズン第1弾 2月15日（木）よりスタート！三色だんごをモチーフにした『花見だんご フラペチーノ®』や『さくらAR』など、お花見気分満載のラインナップが新登場 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5069.php)
+- [SAKURAシーズン第1弾 2月15日（木）よりスタート！三色だんごをモチーフにした『花見だんご フラペチーノ®』や『さくらAR』など、お花見気分満載のラインナップが新登場 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5069/)
 
 販売を開始したのは **「花見だんごフラペチーノ」と「花見さくらクリーム」** の 2 種類。このうち、お花見の大定番な **三色だんごをモチーフにしたフラペチーノをさっそく飲みに行ってきました💪**
 
