--- a/content/blog/2024/03/27.md
+++ b/content/blog/2024/03/27.md
@@ -6,7 +6,7 @@ updated: 2024-03-27
 
 もうすぐ 4 月、新生活とか新学期とか新しい環境で「これからがんばってやっていくぞ！」という人も多いのではないでしょうか。そんな未来に向けて踏み出す大きな一歩を応援してくれる **スターバックスコーヒーの新作ビバレッジが 3 月 13 日から登場** しています💪
 
-- [この春新たな一歩を踏み出す背中に、癒しと前向き気分をチャージする2つのビバレッジ 「キャラメリー ミルクコーヒー フラペチーノ®」と、「ピンク フルーツ チアアップ（Pink Fruits Cheer-up）」を3月13日（水）に発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5103.php)
+- [この春新たな一歩を踏み出す背中に、癒しと前向き気分をチャージする2つのビバレッジ 「キャラメリー ミルクコーヒー フラペチーノ®」と、「ピンク フルーツ チアアップ（Pink Fruits Cheer-up）」を3月13日（水）に発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5103/)
 
 販売を開始したのは **「キャラメリーミルクコーヒーフラペチーノ」と「ピンクフルーツチアアップ」** の 2 種類。このうち、おいしそうなキャラメル色をした **キャラメリーミルクコーヒーフラペチーノをさっそく飲みに行ってきました🍦**
 
