--- a/content/blog/2024/04/18.md
+++ b/content/blog/2024/04/18.md
@@ -6,7 +6,7 @@ updated: 2024-04-18
 
 寒い冬も終わり、外に出ると暖かい日差しが出迎えてくれる春がやってきました。気温が 20 度を超える日も珍しくなくなってきたなあというところですが、これからどんどん暑くなっていくぞと言うかのように **スターバックスコーヒーで 4 月 10 日からサマーシーズンの第 1 弾がスタート** しました。
 
-- [究極をめざした3年目 “別格”なフラペチーノ® が登場！完熟メロンのようなみずみずしさを楽しめる『GOHOBI メロン フラペチーノ®』など4月10日（水）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5128.php)
+- [究極をめざした3年目 “別格”なフラペチーノ® が登場！完熟メロンのようなみずみずしさを楽しめる『GOHOBI メロン フラペチーノ®』など4月10日（水）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5128/)
 
 今回発売が開始したのは **「GOHOBI メロンフラペチーノ」** というメロンフレーバーのフラペチーノ。スタバ歴がそんな長くないので知らなかったのですが、2022 年から続く大人気のフラペチーノとのこと。
 
