--- a/content/blog/2024/04/29.md
+++ b/content/blog/2024/04/29.md
@@ -6,9 +6,9 @@ updated: 2024-04-29
 
 コンビニの飲料コーナーに売っている [スターバックスチルドカップ](https://enjoystarbuckschilled.jp/) に新商品が出たと聞いて、さっそく買いに行ってきました。今月 4 月 9 日に新登場したのは **「ハニーレモンカスタード」** という、めちゃ甘そうな気もするし爽やかそうな気もするドリンク。
 
-- [スターバックス® チルドカップ 「ハニーレモンカスタード」4月9日（火）より期間限定発売― はちみつとカスタードが甘く香るクリーミーなミルクに、さわやかなレモンの香りが溶け合う、新しい季節の訪れにぴったりなデザート飲料 ― | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5120.php)
+- [スターバックス® チルドカップ 「ハニーレモンカスタード」4月9日（火）より期間限定発売― はちみつとカスタードが甘く香るクリーミーなミルクに、さわやかなレモンの香りが溶け合う、新しい季節の訪れにぴったりなデザート飲料 ― | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5120/)
 
-ちょうどコンビニへ買いに行った日が [GOHOBI メロンフラペチーノ](https://www.starbucks.co.jp/press_release/pr2024-5128.php) の販売初日ということで、直前に混んでるスタバを見ていたので「発売されたばっかりだし、チルドカップも売り切れなのでは…？」とか心配しながら向かいましたが、普通にいっぱい置いてありました。
+ちょうどコンビニへ買いに行った日が [GOHOBI メロンフラペチーノ](https://stories.starbucks.co.jp/press/2024/pr2024-5128/) の販売初日ということで、直前に混んでるスタバを見ていたので「発売されたばっかりだし、チルドカップも売り切れなのでは…？」とか心配しながら向かいましたが、普通にいっぱい置いてありました。
 
 お値段は 237 円（税込み）と、コンビニの飲料コーナーに置いてある飲み物の中ではかなり高めなお値段。
 
