--- a/content/blog/2024/06/03.md
+++ b/content/blog/2024/06/03.md
@@ -6,7 +6,7 @@ updated: 2024-06-03
 
 先月 5 月 7 日から全国のファミリーマート限定で [スターバックスチルドカップ](https://enjoystarbuckschilled.jp/) の新商品 **「トロピカルフルーツミックス with マンゴープディング」** が新発売されました。どうやらチルドカップシリーズでは初めてのトロピカルなフルーツの香りを組み合わせたものらしい。早くも夏を感じるぜ…🏖️
 
-- [スターバックス® チルドカップ「トロピカルフルーツミックス with マンゴープディング」 全国の「ファミリーマート」限定で5月7日（火）より新発売 ― トロピカルフルーツのさわやかな香りと、マンゴープディングのなめらかな食感が楽しい贅沢な味わいのデザート飲料 ― | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5147.php)
+- [スターバックス® チルドカップ「トロピカルフルーツミックス with マンゴープディング」 全国の「ファミリーマート」限定で5月7日（火）より新発売 ― トロピカルフルーツのさわやかな香りと、マンゴープディングのなめらかな食感が楽しい贅沢な味わいのデザート飲料 ― | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5147/)
 
 買いに行ったのは発売初日の 5 月 7 日。「発売日に買いに行っても売ってないのでは…」と思いながらも飲料コーナーを見に行くと、新発売の文字と共に置いてありました。他の商品より明らかに数が減っていて、危うく売り切れで買えないところでした（倉庫とかには在庫あったかもですが）。
 
