--- a/content/blog/2024/06/06.md
+++ b/content/blog/2024/06/06.md
@@ -6,7 +6,7 @@ updated: 2024-06-06
 
 暑くてじめじめしてきた 6 月、沖縄のほうでは梅雨入りが発表されましたが関西でもそろそろ梅雨入りするのでしょうか。そんな中、先月末の 5 月 29 日からスターバックスコーヒーで **「バナナブリュレフラペチーノ」という新作フラペチーノ** が発売されたそうなので、さっそく飲みに行ってきました🍌
 
-- [まるで完熟バナナをキャラメリゼしたような甘みとビターな味わいが重なる「バナナ ブリュレ フラペチーノ®」とバナナのやさしい味わいを楽しむ2種のデザートを5月29日（水）に発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5166.php)
+- [まるで完熟バナナをキャラメリゼしたような甘みとビターな味わいが重なる「バナナ ブリュレ フラペチーノ®」とバナナのやさしい味わいを楽しむ2種のデザートを5月29日（水）に発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5166/)
 
 訪れたこの日は、雨が降りそうで降らない…みたいな天気。屋内で過ごす人が多くてスタバも混んでるかなと思いながらの来店でしたが、休日の 11 時過ぎという時間でも比較的空いていて窓際の席に座ることができました。
 
