--- a/content/blog/2024/07/25.md
+++ b/content/blog/2024/07/25.md
@@ -6,7 +6,7 @@ updated: 2024-07-25
 
 刺すような日差しが降り注ぎ、気温が 35 度を超す猛暑日がちらほらと出てきた 7 月。そんな夏に旬を迎える **桃を使ったスタバの新商品が今月 7 月 10 日から発売** されました。スタバの夏の風物詩となりつつあるらしい大人気フレーバーとのことなので、期待しつつさっそく飲みに行ってきました🍑
 
-- [完熟したピーチを頬張るような『ラブ & ピーチ フラペチーノ®』が7月10日（水）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5198.php)
+- [完熟したピーチを頬張るような『ラブ & ピーチ フラペチーノ®』が7月10日（水）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5198/)
 
 サマーシーズン第 3 弾として登場したのは **「ラブ＆ピーチフラペチーノ」** というフラペチーノ。なんかこう、個人的に、注文時に **男性の自分が「ラブ＆ピーチ」って言うのめっちゃ緊張するな…** とドキドキしながらスタバへ向かいました。
 
