--- a/content/blog/2024/08/22.md
+++ b/content/blog/2024/08/22.md
@@ -8,9 +8,9 @@ updated: 2024-08-22
 
 事前に情報をチェックできていなかったので、コンビニで見かけて驚きのあまりそのまま手にとって気づいたら支払いを済ませて店の外に居ました。お値段は税込み 236 円。
 
-- [スターバックス® チルドカップ 「冷やし抹茶ブリュレラテ」7月23日（火）より期間限定発売 ― 夏にぴったりのさわやかな宇治抹茶とミルクの味わいに、輝く夏を彩る甘く香ばしいクレームブリュレの風味を感じられる贅沢な抹茶ティーラテ ― | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5204.php)
+- [スターバックス® チルドカップ 「冷やし抹茶ブリュレラテ」7月23日（火）より期間限定発売 ― 夏にぴったりのさわやかな宇治抹茶とミルクの味わいに、輝く夏を彩る甘く香ばしいクレームブリュレの風味を感じられる贅沢な抹茶ティーラテ ― | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5204/)
 
-プレスリリースの文章を読んだ感じ、前年の夏頃にも抹茶味のスターバックスチルドカップが発売されていそうな雰囲気だったので調べてみると、どうやら [昨年](https://www.starbucks.co.jp/press_release/pr2023-4920.php) や [一昨年](https://www.starbucks.co.jp/press_release/pr2022-4677.php) にも出ていたみたい。
+プレスリリースの文章を読んだ感じ、前年の夏頃にも抹茶味のスターバックスチルドカップが発売されていそうな雰囲気だったので調べてみると、どうやら [昨年](https://stories.starbucks.co.jp/press/2023/pr2023-4920/) や [一昨年](https://stories.starbucks.co.jp/press/2022/pr2022-4677/) にも出ていたみたい。
 
 ![スターバックスチルドカップ冷やし抹茶ブリュレラテの写真](c5a817d0-a757-40a6-5356-38b84f5a2700)
 
