--- a/content/blog/2024/08/29.md
+++ b/content/blog/2024/08/29.md
@@ -6,7 +6,7 @@ updated: 2024-08-29
 
 体温を超すような気温と強い日差しが降り注ぐ 8 月。そんな真夏にぴったりな **新作フラペチーノが 8 月 7 日から発売** されました。サマーシーズン第 3 弾として登場したのは **「サンシャインパインフラペチーノ」というパイナップル味** のフラペチーノ。見た目も夏っぽい新作をさっそく飲みに行ってきました🍍
 
-- [真夏にぴったり！ さわやかなパイナップル果実感と、ぷるぷる食感のジェリーが楽しめる『サンシャイン パイン フラペチーノ®』が8月7日（水）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5218.php)
+- [真夏にぴったり！ さわやかなパイナップル果実感と、ぷるぷる食感のジェリーが楽しめる『サンシャイン パイン フラペチーノ®』が8月7日（水）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5218/)
 
 暑い中どうにか辿り着いたスタバで、さっそくパイナップルテイストのフラペチーノを注文。
 
