--- a/content/blog/2024/09/19.md
+++ b/content/blog/2024/09/19.md
@@ -6,7 +6,7 @@ updated: 2024-09-19
 
 ようやく過ごしやすい気温になってきたような気もする 9 月。秋といえば、さつまいもを使ったおいしいスイーツの季節！全国のスターバックスコーヒーで **9 月 4 日から秋の訪れを感じる新作フラペチーノが発売** ということで、さっそく飲みに行ってきました🍠
 
-- [上品な甘みの焼き芋とコク深いカラメルソースがほどけ合う『焼き芋 香ばしカラメル フラペチーノ®』を9月4日（水）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5227.php)
+- [上品な甘みの焼き芋とコク深いカラメルソースがほどけ合う『焼き芋 香ばしカラメル フラペチーノ®』を9月4日（水）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5227/)
 
 新たに登場したのは **「焼き芋香ばしカラメルフラペチーノ」** という秋らしい色をしたフラペチーノ。朝の比較的空いている店内でさっそく注文し、そわそわしながら出来上がりを待ちます。
 
