--- a/content/blog/2024/10/17.md
+++ b/content/blog/2024/10/17.md
@@ -6,7 +6,7 @@ updated: 2024-10-17
 
 スタバの缶コーヒーの新シリーズが出たと聞いて、さっそく買いに行ってきました☕ 10 月 1 日から全国のコンビニやスーパーマーケットで販売を開始したのは **「MY COFFEE TIME ブラック」と「MY COFFEE TIME カフェラテ」** の 2 種類。私はコーヒーはミルクなどがたっぷり入ってるものでないと飲めないので、カフェラテのほうを購入しました。
 
-- [スターバックスからショート缶コーヒーの新シリーズが登場 「スターバックス® MY COFFEE TIME™ ブラック」「スターバックス® MY COFFEE TIME™ カフェラテ」、10月1日（火）より新発売 ― いつでも・どこでも好きな時に気持ちをリセットし、“自分時間”を心地よく楽しめる缶コーヒー ― | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5240.php)
+- [スターバックスからショート缶コーヒーの新シリーズが登場 「スターバックス® MY COFFEE TIME™ ブラック」「スターバックス® MY COFFEE TIME™ カフェラテ」、10月1日（火）より新発売 ― いつでも・どこでも好きな時に気持ちをリセットし、“自分時間”を心地よく楽しめる缶コーヒー ― | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5240/)
 
 缶の大きさは、一般的な缶コーヒーと同じ小さめサイズの 185g 缶。コンビニやスーパーマーケットで販売されているスタバの飲み物というと結構良いお値段がするイメージですが、このスタバの缶コーヒーは 1 本 130 円ほどと手に取りやすいお値段。
 
