--- a/content/blog/2024/10/31.md
+++ b/content/blog/2024/10/31.md
@@ -6,7 +6,7 @@ updated: 2024-10-31
 
 今年も 10 月 31 日のハロウィンの時期がやってきました。今年も全国のスターバックスコーヒーで **ハロウィンの新作フラペチーノが発売** ということでさっそく飲みに行ってきました🔥 2024 年のスターバックスコーヒーのハロウィンのテーマは **「MAGICAL FIRE HALLOWEEN（炎の魔法が包むハロウィン）」** だそう。そんな妖しげな見た目のフラペチーノを飲みます。
 
-- [炎の魔法が包むスターバックス ハロウィンがスタート「メラ メーラ フラペチーノ®」と「マラサダ ハロウィン ラズベリー&ブルーベリー」が10月11日（金）に発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5265.php)
+- [炎の魔法が包むスターバックス ハロウィンがスタート「メラ メーラ フラペチーノ®」と「マラサダ ハロウィン ラズベリー&ブルーベリー」が10月11日（金）に発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5265/)
 
 今月 10 月 11 日から新たに登場したのは、なんだかちょっと不気味な色をした **「メラメーラフラペチーノ」** というフラペチーノ。店内用のグラスで用意していただきましたが、半分が赤色、もう半分が青色のボディ。妖しげな見た目にハロウィンっぽさを感じます。
 
