--- a/content/blog/2024/11/12.md
+++ b/content/blog/2024/11/12.md
@@ -6,7 +6,7 @@ updated: 2024-11-12
 
 全国のセブンイレブン限定で 先月 10 月 22 日から新発売の **「スターバックス WINTER COLLECTION アップル＆ペアーティーラテ ウィズスパイス」を買ってきました🍎** ペットボトル入りのスタバのティーラテで、これからの季節にぴったりな温かいドリンクです。
 
-- [「スターバックス® WINTER COLLECTION™ アップル&ペアーティーラテ ウィズスパイス」全国のセブン-イレブン限定で10月22日（火）より新発売 ― りんごのやさしい酸味と、とろける洋梨が織りなすハーモニーにほのかにスパイスが香る冬季限定のホットティーラテ ― | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5256.php)
+- [「スターバックス® WINTER COLLECTION™ アップル&ペアーティーラテ ウィズスパイス」全国のセブン-イレブン限定で10月22日（火）より新発売 ― りんごのやさしい酸味と、とろける洋梨が織りなすハーモニーにほのかにスパイスが香る冬季限定のホットティーラテ ― | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5256/)
 
 スタバのペットボトル飲料「スターバックス WINTER COLLECTION」は、昨年から登場したホット専用の冬季限定ペットボトルシリーズだそう。そんなまだ新しいシリーズから今回出たのが、アメリカで長年親しまれているらしいアップルサイダーなる飲み物からインスピレーションを得て開発されたティーラテ。
 
