--- a/content/blog/2024/11/21.md
+++ b/content/blog/2024/11/21.md
@@ -6,7 +6,7 @@ updated: 2024-11-21
 
 先月末のハロウィンが終わったかと思えば、途端に街は冬一色。まだ 1 ヶ月以上先だというのに、もうクリスマスムードが漂っている　場所もちらほら。そんな中、今年も **スターバックスコーヒーでホリデーシーズンのドリンクやフードの販売が開始** されました❄️
 
-- [スターバックス ホリデーシーズンの幕開け！ 初雪のワクワク感を届ける“白い”ビバレッジが11月1日（金）に登場 東京で一足早く#初雪フラペチーノ® を楽しむ『スターバックス コーヒー 初雪店』も4日間限定でオープン | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5286.php)
+- [スターバックス ホリデーシーズンの幕開け！ 初雪のワクワク感を届ける“白い”ビバレッジが11月1日（金）に登場 東京で一足早く#初雪フラペチーノ® を楽しむ『スターバックス コーヒー 初雪店』も4日間限定でオープン | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2025-5286/)
 
 新たに登場したドリンクは「マカダミアホワイトスノーチョコレートフラペチーノ」と「マカダミアホワイトスノーモカ」の 2 種類。どちらも上にはクリームが乗っていて、そこにキラキラときらめく **雪のような見た目のホワイトとライトブルーのクラッシュキャンディーとシルバーシュガーがトッピング** されています。
 
