--- a/content/blog/2024/12/11.md
+++ b/content/blog/2024/12/11.md
@@ -6,7 +6,7 @@ updated: 2024-12-11
 
 気づけば 12 月も中旬、今年もあと少しとなりました。クリスマスも近づいている中 **先月 11 月 22 日からスターバックスコーヒーでホリデーシーズン第 2 弾がスタート** となりました。新作ドリンクも登場したということで、さっそく飲みに行ってきました🎄
 
-- [ストロベリーを存分に味わう『メリーベリー ストロベリー フラペチーノ®』など ホリデー気分を盛り上げてくれる心高鳴るビバレッジが11月22日（金）より発売 スターバックス ホリデーシーズン 第2弾！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5318.php)
+- [ストロベリーを存分に味わう『メリーベリー ストロベリー フラペチーノ®』など ホリデー気分を盛り上げてくれる心高鳴るビバレッジが11月22日（金）より発売 スターバックス ホリデーシーズン 第2弾！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2025-5318/)
 
 新たに登場したドリンクは **「メリーベリーストロベリーフラペチーノ」と「メリークリームラテ」** の 2 種類。また、期間限定でホイップクリームを乗せることができる全てのドリンクに **「メリークリーム」のカスタマイズができる** というのもやっているそう。
 
