--- a/content/blog/2025/01/03.md
+++ b/content/blog/2025/01/03.md
@@ -6,7 +6,7 @@ updated: 2025-01-03
 
 あっという間に過ぎ去った 2024 年。キラキラとしたクリスマスが終わったばかりの **先月 12 月 26 日からスターバックスコーヒーで年末年始の新作ティービバレッジが新発売** となりました。冬真っ只中の寒い日でしたが、気合を入れて新作フラペチーノを飲みにさっそくスタバへ行ってきました⛄️
 
-- [『ロイヤル アール グレイ ブーケ フラペチーノ®』等ブーケのような華やかなご褒美感のある商品 年末年始の新作ティービバレッジが12月26日から新発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5347.php)
+- [『ロイヤル アール グレイ ブーケ フラペチーノ®』等ブーケのような華やかなご褒美感のある商品 年末年始の新作ティービバレッジが12月26日から新発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2025-5347/)
 
 年末年始に全国のスタバで販売を開始したドリンクは **「ロイヤルアールグレイブーケフラペチーノ」「ロイヤルアールグレイブーケ & ティーラテ」「ハニージンジャーチャイティーラテ」** の 3 種類。どのドリンクもアールグレイやチャイなどのティービバレッジ。
 
