--- a/content/blog/2025/01/30.md
+++ b/content/blog/2025/01/30.md
@@ -6,11 +6,11 @@ updated: 2025-01-30
 
 新年を迎え、正月が過ぎると世間は徐々にバレンタインのムードが高まってきます。甘いもの好きな私としてはチョコを使った商品がいっぱいで非常にうれしいこの季節、今月 **1 月 15 日から全国のスターバックスコーヒーでチョコレートビバレッジが登場** ということでさっそく飲みに行ってきました🍫
 
-- [「クラシック ショコラ シンフォニー フラペチーノ®」を1月15日（水）より発売 多様なチョコレートの音色が奏でるスターバックスバレンタインがスタート | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5355.php)
+- [「クラシック ショコラ シンフォニー フラペチーノ®」を1月15日（水）より発売 多様なチョコレートの音色が奏でるスターバックスバレンタインがスタート | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5355/)
 
 今月販売を開始したドリンクは **「クラシックショコラシンフォニーフラペチーノ」「ブロンドショコラシンフォニーフラペチーノ」** の 2 種類のフラペチーノと **「クラシックショコララテ」** という温かなドリンクの 3 商品。また、24 日からはバレンタインシーズン第 2 弾として **「ルビーショコラシンフォニーフラペチーノ」** も販売を開始しました。
 
-- [「ルビー ショコラ シンフォニー フラペチーノ®」を1月24日（金）より発売 スターバックスバレンタイン第二弾は、目にも華やかなチョコレートの奏で | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5374.php)
+- [「ルビー ショコラ シンフォニー フラペチーノ®」を1月24日（金）より発売 スターバックスバレンタイン第二弾は、目にも華やかなチョコレートの奏で | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5374/)
 
 私がスタバへバレンタインのフラペチーノを飲みに行ったときには、既に「ルビーショコラシンフォニーフラペチーノ」の販売が開始されていました。3 種類あるフラペチーノの中でどれを注文しようか悩みましたが、選ばれたのは「クラシックショコラシンフォニーフラペチーノ」。
 
