--- a/content/blog/2025/02/28.md
+++ b/content/blog/2025/02/28.md
@@ -6,9 +6,9 @@ updated: 2025-02-28
 
 最強寒波がやってくるなどまだまだ寒い日が続きますが、もうすぐ 3 月となり春がやってきます。そんな春目前のこの時期に 全国のスターバックスコーヒーにて **今月 2 月 15 日から春の新作フラペチーノが販売開始** ということでさっそく飲みに行ってきました🌸
 
-- [『白桃と桜わらびもち フラペチーノ®』が2月15日（土）より新発売 みずみずしい白桃を春らしく仕立てた桜色の新作フラペチーノ® | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5402.php)
+- [『白桃と桜わらびもち フラペチーノ®』が2月15日（土）より新発売 みずみずしい白桃を春らしく仕立てた桜色の新作フラペチーノ® | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5402/)
 
-今回販売が開始されたドリンクは **「白桃と桜わらびもちフラペチーノ」** というフラペチーノ。また、同日から新作の [「いちご桜ソイラテ」も販売開始](https://www.starbucks.co.jp/press_release/pr2025-5412.php) となるそう。
+今回販売が開始されたドリンクは **「白桃と桜わらびもちフラペチーノ」** というフラペチーノ。また、同日から新作の [「いちご桜ソイラテ」も販売開始](https://stories.starbucks.co.jp/press/2025/pr2025-5412/) となるそう。
 
 先に公開されていたプレスリリースにはフラペチーノの情報しかなかったので、「今回の期間限定はフラペチーノだけかー」と思いながらお店を訪れたらもう一つ新作が出ていて驚き。フラペチーノを注文する予定でお店へと来ていたので、予定通り **「白桃と桜わらびもちフラペチーノ」を注文** しました。
 
