--- a/content/blog/2025/05/15.md
+++ b/content/blog/2025/05/15.md
@@ -6,7 +6,7 @@ updated: 2025-05-15
 
 まだ夏というにはちょっと早いけれど、まるで夏のような気温の日が見られるようになってきました。そんな夏が近づいてくる気配を感じるこの時期に、全国のスターバックスコーヒーで **先月 4 月 25 日からソーダを使った新作ドリンクが販売開始** ということでさっそく飲みに行ってきました🍹
 
-- [スターバックスから新たに“香るソーダ”が登場！「チラックス ソーダ ストロベリー」、「チラックス ソーダ ゆずシトラス」の2種が4月25日（金）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5501.php)
+- [スターバックスから新たに“香るソーダ”が登場！「チラックス ソーダ ストロベリー」、「チラックス ソーダ ゆずシトラス」の2種が4月25日（金）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5501/)
 
 今回販売が開始されたドリンクは **「チラックスソーダストロベリー」と「チラックスソーダゆずシトラス」** の 2 種類。どちらもフルーツの果肉にすっきりとしたシトラスの香りと炭酸が合わさったドリンクで、個人的にスタバで炭酸の飲み物って全然見たことがなくてなんだか新鮮な気持ち。
 
