--- a/content/blog/2025/07/17.md
+++ b/content/blog/2025/07/17.md
@@ -10,7 +10,7 @@ updated: 2025-07-17
 
 スターバックスサマー第 3 弾として今月 7 月 9 日から販売を開始したのは **「マスカットアールグレイフローズンティー」「グランマスカットフラペチーノ」「チラックスソーダマスカット」** という、3 種類ともマスカットフレーバーの商品。
 
-- [スターバックス サマー第3弾は、「3つの夏マスカット」じゅわっと、しゅわっと、ふわり華やぐ3種の新作ビバレッジが7月9日（水）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5564.php)
+- [スターバックス サマー第3弾は、「3つの夏マスカット」じゅわっと、しゅわっと、ふわり華やぐ3種の新作ビバレッジが7月9日（水）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5564/)
 
 どれを注文しようかと悩みましたが、やっぱりスタバといえばフラペチーノ。今回は **「グランマスカットフラペチーノ」を注文** しました。少し前から [モバイルオーダーで店内グラスが利用できるようになった](/blog/20250620/) ので、店内の席を確保しつつ座ったまま注文。レジに行くことなく、フラペチーノが映えるグラスで用意してもらえるのは本当に便利です。
 
