--- a/content/blog/2025/08/09.md
+++ b/content/blog/2025/08/09.md
@@ -10,7 +10,7 @@ updated: 2025-08-09
 
 スターバックスサマー第 4 弾として今月 8 月 1 日から販売を開始した桃の商品は **「ヘブンリーピーチフラペチーノ」「チラックスソーダピーチ」「クラフトジューシーピーチティー」** の 3 種類。
 
-- [スターバックス サマー第4弾は、「3つの幸せピーチ」とろっと、しゅわっと、ごろっと、それぞれの魅力を楽しむ3種のピーチビバレッジが8月1日（金）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5575.php)
+- [スターバックス サマー第4弾は、「3つの幸せピーチ」とろっと、しゅわっと、ごろっと、それぞれの魅力を楽しむ3種のピーチビバレッジが8月1日（金）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5575/)
 
 外国人観光客で溢れる大阪の、外国人観光客で溢れる店内に席を確保しつつ、モバイルオーダーで新作のフラペチーノを注文。出来上がりの案内を聞き逃すまいと耳を澄ませてはいたものの、5 分ちょい経ってもそれっぽい案内が聞こえないなと思い受け取り口に行くと、既に注文の品が置いてありました。
 
