--- a/content/blog/2025/09/11.md
+++ b/content/blog/2025/09/11.md
@@ -10,7 +10,7 @@ updated: 2025-09-11
 
 今回販売が開始されたドリンクは **スターバックスの秋の風物詩だという焼き芋を使用した「ほうじ茶香る焼き芋ムースティーラテ」** という商品。また、昨年と一昨年に発売して大好評だった **「チョコレートムースラテ」** という商品も同日に販売を開始しています。
 
-- [“和の香ばしさ”とふんわりムースの口どけを味わう秋の新感覚ビバレッジ 『ほうじ茶香る 焼き芋 ムース ティー ラテ』など9月3日（水）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5602.php)
+- [“和の香ばしさ”とふんわりムースの口どけを味わう秋の新感覚ビバレッジ 『ほうじ茶香る 焼き芋 ムース ティー ラテ』など9月3日（水）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5602/)
 
 今回は、新商品の「ほうじ茶香る焼き芋ムースティーラテ」のほうを注文しました。サイズは Tall のみで、お値段は 640 円。
 
