--- a/content/blog/2025/10/02.md
+++ b/content/blog/2025/10/02.md
@@ -10,7 +10,7 @@ updated: 2025-10-02
 
 今回販売が開始されたのは、芳醇な味わいの洋なしとコク深い生キャラメルを使った **「洋なし生キャラメルフラペチーノ」** という新作フラペチーノ。洋なしの旬は秋で、生キャラメルは茶色で秋っぽい色をしているので、この 2 つを組み合わせたフラペチーノは秋のフラペチーノです。
 
-- [芳醇で華やかな洋なしと、生キャラメルの至福のハーモニー まるで本格的なスイーツ『洋なし 生キャラメル フラペチーノ®』が9月10日（水）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2025-5612.php)
+- [芳醇で華やかな洋なしと、生キャラメルの至福のハーモニー まるで本格的なスイーツ『洋なし 生キャラメル フラペチーノ®』が9月10日（水）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5612/)
 
 洋なし生キャラメルフラペチーノの販売を知らせるプレスリリースには、月に約 400 種類以上のスイーツを試すというスイーツライターの chico さんという方が登場し、今回の新作フラペチーノのおすすめカスタマイズをお話しされていました。
 
