--- a/content/blog/2025/10/22.md
+++ b/content/blog/2025/10/22.md
@@ -16,7 +16,7 @@ updated: 2025-10-22
 
 現金を持たずに自動販売機を探し回っていたせいで、せっかく見つけたのに買えなかったり、急遽サントリーの自動販売機で使えるというキャッシュレスアプリ「[ジハンピ](https://www.suntory.co.jp/softdrink/jihanki/jihanpi/)」をインストールして色々設定することになったりしつつ、無事「スターバックス MY RETREAT キャラメルマキアート」の入手に成功しました。
 
-- [スターバックスから日本初の“自動販売機限定商品”が登場 ペットボトル入りコーヒーシリーズ「スターバックス® MY RETREAT™ キャラメルマキアート」10月7日（火）より新発売 ― キャラメルのとろけるような甘さとまろやかなミルク感で、忙しい毎日の合間にやすらぎのひとときを届けるコーヒー飲料 ― | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5631.php)
+- [スターバックスから日本初の“自動販売機限定商品”が登場 ペットボトル入りコーヒーシリーズ「スターバックス® MY RETREAT™ キャラメルマキアート」10月7日（火）より新発売 ― キャラメルのとろけるような甘さとまろやかなミルク感で、忙しい毎日の合間にやすらぎのひとときを届けるコーヒー飲料 ― | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2025-5631/)
 
 小さいサイズのボトルだったので、てっきり「あったか～い」ドリンクなのかと思っていたのですが、出てきたドリンクはよく冷えたもの。キャップには「HOT & COLD」とあり、また「この製品は加温機販売が出来ます」と書かれていたので、もしかすると他の自動販売機では温かい状態で買うことができるところもあるのかも。
 
