--- a/content/blog/2025/10/30.md
+++ b/content/blog/2025/10/30.md
@@ -10,7 +10,7 @@ updated: 2025-10-30
 
 今回販売が開始されたドリンクはアサイーと複数のベリーを組み合わせた **アサイーベリーフラペチーノという新作フラペチーノ** と、同じくアサイーとベリーを使った **アサイーベリーゆずシトラス & ティー** というティー商品の 2 つ。どちらも気になりましたが、今回は **アサイーベリーフラペチーノを注文** しました。
 
-- [スターバックスのHalloweenがスタート！今年は“黒猫”が主役！？ ザクっと食感と甘酸っぱいアサイーベリーを楽しめるビバレッジなどが10月10日（金）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5633.php)
+- [スターバックスのHalloweenがスタート！今年は“黒猫”が主役！？ ザクっと食感と甘酸っぱいアサイーベリーを楽しめるビバレッジなどが10月10日（金）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2026-5633/)
 
 休日の朝から列車に揺られながらやってきたのは、南海和歌山大学前駅を出てすぐのところにある [イオンモール和歌山](https://wakayama-aeonmall.com/) 内のスターバックスコーヒー。事前に Google マップのレビューを読んでいた感じでは席の確保が難しそうな印象を受けたのですが、普通に半分以上の席が空いていて余裕がありました。
 
