--- a/content/blog/2025/11/06.md
+++ b/content/blog/2025/11/06.md
@@ -10,7 +10,7 @@ updated: 2025-11-06
 
 今回販売が開始されたドリンクは、スターバックスの冬を代表するティーとして毎年登場を楽しみにしている人も多い人気商品だという「ジョイフルメドレーティー」が味わえる **ストロベリー&ジョイフルメドレーティーフラペチーノ** と **ストロベリームース&ジョイフルメドレーティーラテ** という商品の 2 つ。
 
-- [スターバックス ホリデースタート！ ストロベリーと華やかなティーが織りなす気分高まる“とろあま”体験 フラペチーノ® とティーラテの2種が11月1日（土）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5647.php)
+- [スターバックス ホリデースタート！ ストロベリーと華やかなティーが織りなす気分高まる“とろあま”体験 フラペチーノ® とティーラテの2種が11月1日（土）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2026-5647/)
 
 どちらも気になりましたが、天気の良い日に歩いてスターバックスコーヒーの店舗まで向かっているうちになんだか少し暑くなってきたので、今回は冷たい **ストロベリー&ジョイフルメドレーティーフラペチーノを注文** しました。
 
