--- a/content/blog/2025/12/04.md
+++ b/content/blog/2025/12/04.md
@@ -18,7 +18,7 @@ updated: 2025-12-04
 
 スターバックスコーヒーでは、今回のお目当てである「ホットアップルサイダー」と同日に「スモアチョコレートラテ」と「スモアチョコレートフラペチーノ」という、名前からしてとっても甘そうな商品の販売が始まっており、その影響で店内にはチョコレートの香りが充満していました。先日フードコートで近くに座っていた女子高生が「今回のスタバの新作のスモアのやつ、やばい！」と話していたので、気になります。
 
-- [スターバックス ホリデー第2弾！ ふわっ、さくっ、とろっ。食感とチョコレートの濃厚な味わいがとろけあう『スモア チョコレート ラテ』と『スモア チョコレート フラペチーノ®』が11月26日（水）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5675.php)
+- [スターバックス ホリデー第2弾！ ふわっ、さくっ、とろっ。食感とチョコレートの濃厚な味わいがとろけあう『スモア チョコレート ラテ』と『スモア チョコレート フラペチーノ®』が11月26日（水）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2026-5675/)
 
 席に座って、スマートフォンアプリからホットアップルサイダーをモバイルオーダー。店内利用なので、のんびり過ごせるようにオプションで店内用マグカップでの用意を選択します。フラペチーノとは異なりサイズを選ぶことができたので、今回は Tall サイズでの注文。お値段は 600 円でした。
 
