--- a/content/blog/2026/01/08.md
+++ b/content/blog/2026/01/08.md
@@ -10,7 +10,7 @@ updated: 2026-01-08
 
 今回販売が開始されたドリンクは、玉露抹茶を使用した **玉露抹茶フラペチーノ** と **玉露抹茶ラテ** の 2 商品。それから寒い日に心も身体もあたたまる **はちみつ生姜米糀ミルクラテ** というドリンクも、玉露抹茶のドリンクと同日から販売を開始しています
 
-- [スターバックスで過ごす年末年始！ 今年は“抹茶づくし”　もっちり、サクサクの新食感玉露抹茶を使用したフラペチーノ® とティーラテの2種が12月26日（金）より登場 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5701.php)
+- [スターバックスで過ごす年末年始！ 今年は“抹茶づくし”　もっちり、サクサクの新食感玉露抹茶を使用したフラペチーノ® とティーラテの2種が12月26日（金）より登場 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2026-5701/)
 
 最高気温が 1 桁の寒い日が続いている中だったので、あたたかい玉露抹茶ラテにしようかと悩みましたが、スタバといえばフラペチーノ。今回は **玉露抹茶フラペチーノを注文** しました。
 
