--- a/content/blog/2026/02/05.md
+++ b/content/blog/2026/02/05.md
@@ -10,7 +10,7 @@ updated: 2026-02-05
 
 今回、販売が開始されたのは **カカオエスプレッソアフォガートフラペチーノ** という新作フラペチーノ。極上のアフォガートフラペチーノ体験を追求した特別な一杯、とのことで、何やら他のフラペチーノにはない様々な体験ができるらしい…。
 
-- [本格バレンタインシーズンが到来！ スターバックス バレンタインシーズンにお届けする極上のアフォガートフラペチーノ® 体験 『カカオ エスプレッソ アフォガート フラペチーノ®』が1月28日（水）より発売 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5727.php)
+- [本格バレンタインシーズンが到来！ スターバックス バレンタインシーズンにお届けする極上のアフォガートフラペチーノ® 体験 『カカオ エスプレッソ アフォガート フラペチーノ®』が1月28日（水）より発売 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2026/pr2026-5727/)
 
 こちらのフラペチーノの販売開始は先述の通り 1 月 28 日ですが、その前日の 27 日に、専用の二次元バーコードをレジにて提示することでひと足早く新作を楽しむことができる先行販売が実施されていました。
 
