--- a/content/blog/2024/03/12.md
+++ b/content/blog/2024/03/12.md
@@ -6,7 +6,7 @@ updated: 2024-03-12
 
 ちょっと暖かくなってきたかと思いきや、凍えるような寒さ。春は一体いつ来るんだと思う今日この頃。先月から始まったスターバックスコーヒーの SAKURA シーズンのビバレッジに、第 2 弾として新たに **「花見抹茶クリームフラペチーノ」** と **「花見ブロンドラテ」** が登場しました。
 
-- [SAKURAシーズン第2弾！人気のビバレッジをSAKURAで彩る『花見抹茶 クリーム フラペチーノ®』と『花見 ブロンド ラテ』が3月1日（金）より登場 | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2024-5095.php)
+- [SAKURAシーズン第2弾！人気のビバレッジをSAKURAで彩る『花見抹茶 クリーム フラペチーノ®』と『花見 ブロンド ラテ』が3月1日（金）より登場 | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2024/pr2024-5095/)
 
 気温 5 ℃くらいの激寒気温の中どうにかたどり着いたスタバ。新作フラペチーノを注文しようとやってきたわけですが、寒すぎて気持ちが揺らぎます。そんな心に活を入れ、予定通り **注文したのは「花見抹茶クリームフラペチーノ」** です。
 
