--- a/content/blog/2025/11/27.md
+++ b/content/blog/2025/11/27.md
@@ -10,7 +10,7 @@ updated: 2025-11-27
 
 今月 11 月 14 日から販売が開始されたのは **トリュフスープチーノ** という商品。名前がコーヒーのカプチーノと似ていますが、スープチーノはカプチーノのようにバリスタの方が一杯ずつ丁寧にスチームしたふわふわ仕立てのスープだそう。
 
-- [スターバックスの新提案バリスタがいれるスープ“スープチーノ”が登場！ トリュフ香る3種のきのこ風味で贅沢なひとときを楽しむ ふわふわスチーム仕立てのスープが11月14日（金）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5667.php)
+- [スターバックスの新提案バリスタがいれるスープ“スープチーノ”が登場！ トリュフ香る3種のきのこ風味で贅沢なひとときを楽しむ ふわふわスチーム仕立てのスープが11月14日（金）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2026-5667/)
 
 そんなスターバックスならではのスープを飲むため、寒い朝に家を出て訪れたスターバックスの店舗。トリュフスープチーノの販売が開始された 11 月 14 日から、スターバックスのモーニングサービスがリニューアルされて対象のビバレッジとフードを同時に購入すると 40 円引き（店内価格）になるとのことで、せっかくなのでトリュフスープチーノと一緒に「ベーコンエッグチーズベーグルサンド」を注文しました。
 
