--- a/content/blog/2025/12/18.md
+++ b/content/blog/2025/12/18.md
@@ -10,7 +10,7 @@ updated: 2025-12-18
 
 訪れたのは平日夜のスターバックスコーヒーエキマルシェ大阪店。お店を訪れたこの日は 12 月 2 日。毎月 2 日は JR 西日本グループの商業施設等で「西の日」のキャンペーンが開催され、WESTER ポイントが多くもらえるなどお得がいっぱいということで、JR 大阪駅にあるこちらの店舗へ足を運びました。
 
-- [スターバックス ホリデー第2弾！ ふわっ、さくっ、とろっ。食感とチョコレートの濃厚な味わいがとろけあう『スモア チョコレート ラテ』と『スモア チョコレート フラペチーノ®』が11月26日（水）より登場！ | スターバックス コーヒー ジャパン](https://www.starbucks.co.jp/press_release/pr2026-5675.php)
+- [スターバックス ホリデー第2弾！ ふわっ、さくっ、とろっ。食感とチョコレートの濃厚な味わいがとろけあう『スモア チョコレート ラテ』と『スモア チョコレート フラペチーノ®』が11月26日（水）より登場！ | スターバックス コーヒー ジャパン](https://stories.starbucks.co.jp/press/2025/pr2026-5675/)
 
 梅田エリアには他にもスタバが何箇所かありますが、エキマルシェ大阪店は入口付近に「ご予約席」の置物の用意があるので、荷物が盗まれるかも…と心配しながら椅子にカバンなどを置いてレジへと向かう必要がないという点において、比較的席の確保難易度が易しめ。外から店内の空席状況をある程度確認できるのも助かります。
 
